# bombic

./: AUTHORS  CODES.txt  Makefile.in  README-old  README.md  backuper.sh  configure  configure.in  index.html  params.json  run.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in  cz-utf8.txt  de-utf8.txt  el-utf8.txt  en.txt  langid.txt  pl-utf8.txt
data/eng/: Makefile.am  Makefile.in
data/font/: Makefile.am  Makefile.in  create.am.sh
data/maps/: Base.ble  Berny.ble  Black_Holes.ble  Bonusmania.ble  Forrest.ble  Heroes.ble  House.ble  Machine.ble  Makefile.am  Makefile.in  Oases.ble  Smile.ble  Two_Rocks.ble  Ufo.ble  Well.ble  deathmaps.txt
data/menu/: Makefile.am  Makefile.in
data/samples/: Makefile.am  Makefile.in  create.am.sh
data/singlemaps/: Makefile.am  Makefile.in  mapA1.ble  mapA2.ble  mapA3.ble  mapA4.ble  mapA5.ble  mapA6.ble  mapA7.ble  mapA8.ble  mapA9.ble  mapB1.ble  mapB2.ble  mapB3.ble  mapB4.ble  mapB5.ble  mapB6.ble  mapB7.ble  mapB8.ble  mapB9.ble  mapC1.ble  mapC2.ble  mapC3.ble  mapC4.ble  mapC5.ble  mapC6.ble  mapC7.ble  mapC8.ble  mapC9.ble
doc/: manual_cz.html  manual_de.html  manual_el.html
extras/: Borders.ble  Flik.ble  Flok.ble
src/: D3DXApp.cpp  D3DXApp.h  GBase.cpp  GBase.h  GBomba.cpp  GBomba.h  GBombaMega.cpp  GBombaMega.h  GBombaNapalm.cpp  GBombaNapalm.h  GBomber.cpp  GBomber.h  GBomber_n_randkicker.h  GBonus.cpp  GBonus.h  GBonus_bomb.cpp  GBonus_bomb.h  GBonus_fire.cpp  GBonus_fire.h  GBonus_fireman.cpp  GBonus_fireman.h  GBonus_kicker.cpp  GBonus_kicker.h  GBonus_live.cpp  GBonus_live.h  GBonus_megabomb.cpp  GBonus_megabomb.h  GBonus_n_berserk.cpp  GBonus_n_berserk.h  GBonus_n_dement.cpp  GBonus_n_dement.h  GBonus_n_kicker.cpp  GBonus_n_kicker.h  GBonus_n_nobomb.cpp  GBonus_n_nobomb.h  GBonus_n_slow.cpp  GBonus_n_slow.h  GBonus_n_stop.cpp  GBonus_n_stop.h  GBonus_napalmbomb.cpp  (+87 more)
