AC_INIT(bombic, 0.0.1, [bernard@matfyz.cz])
AC_CONFIG_FILES(Makefile 
		data/Makefile 
		data/eng/Makefile
		data/font/Makefile
		data/maps/Makefile
		data/menu/Makefile
		data/samples/Makefile
		data/singlemaps/Makefile
		src/Makefile
		)
AC_CONFIG_HEADERS(src/config.h)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_CXX

AM_PATH_SDL(1.2.0)
AC_CHECK_LIB(SDL_image, IMG_Load)
AC_CHECK_LIB(SDL_ttf, TTF_OpenFont)
AC_CHECK_LIB(SDL_mixer, Mix_OpenAudio)
AC_CHECK_HEADERS(SDL/SDL_image.h)
AC_CHECK_HEADERS(SDL/SDL_ttf.h)
AC_CHECK_HEADERS(SDL/SDL_mixer.h)

AC_ARG_ENABLE([debug],                                                                                               
       [AC_HELP_STRING([--enable-debug],                                                                             
                       [compile with debugging information])],                                                       
       [ if test "$enable_debug" != no; then                                                                         
               AC_DEFINE(DEBUG, 1, [Define to turn debugging messages on])                                           
               CXXFLAGS="$CXXFLAGS -ggdb3 --save-temps -O0"                                                          
       fi])                                                                                                          
                                                                                                                    
dnl define PACKAGE_DATA_DIR                                                                                          
if test "${datadir}" = '${prefix}/share'; then                                                                       
       if test "${prefix}" = "NONE"; then                                                                            
               AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR,                                                                  
                      "${ac_default_prefix}/share/${PACKAGE}",                                                       
                       [Data directory (/usr/local/share/bombic by default)])                                        
       else                                                                                                          
               AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR,                                                                  
                       "${prefix}/share/${PACKAGE}",                                                                 
                       [Data directory (/usr/local/share/bombic by default)])                                        
       fi                                                                                                            
else                                                                                                                 
       AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR,                                                                          
                       "${datadir}/${PACKAGE}",                                                                      
                       [Data directory (/usr/local/share/bombic by default)])                                        
fi

AC_OUTPUT
