bin_PROGRAMS = bombic

bombic_CPPFLAGS = $(SDL_CFLAGS)

bombic_LDFLAGS = $(SDL_LIBS)

bombic_SOURCES =                                           \
D3DXApp.cpp                  D3DXApp.h                     \
GBase.cpp                    GBase.h                       \
GBomba.cpp                   GBomba.h                      \
GBombaMega.cpp               GBombaMega.h                  \
GBombaNapalm.cpp             GBombaNapalm.h                \
GBomber.cpp                  GBomber.h                     \
GBomber_n_randkicker.h                                     \
GBonus.cpp                   GBonus.h                      \
GBonus_bomb.cpp              GBonus_bomb.h                 \
GBonus_fire.cpp              GBonus_fire.h                 \
GBonus_fireman.cpp           GBonus_fireman.h              \
GBonus_kicker.cpp            GBonus_kicker.h               \
GBonus_live.cpp              GBonus_live.h                 \
GBonus_megabomb.cpp          GBonus_megabomb.h             \
GBonus_n_berserk.cpp         GBonus_n_berserk.h            \
GBonus_n_dement.cpp          GBonus_n_dement.h             \
GBonus_n_kicker.cpp          GBonus_n_kicker.h             \
GBonus_n_nobomb.cpp          GBonus_n_nobomb.h             \
GBonus_n_slow.cpp            GBonus_n_slow.h               \
GBonus_n_stop.cpp            GBonus_n_stop.h               \
GBonus_napalmbomb.cpp        GBonus_napalmbomb.h           \
GBonus_nemoc_ostatni.cpp     GBonus_nemoc_ostatni.h        \
GBonus_posilani.cpp          GBonus_posilani.h             \
GBonus_shield.cpp            GBonus_shield.h               \
GBonus_speed.cpp             GBonus_speed.h                \
GBonus_timer.cpp             GBonus_timer.h                \
GFile.cpp                    GFile.h                       \
GGame.cpp                    GGame.h                       \
GMap.cpp                     GMap.h                        \
GMrcha.cpp                   GMrcha.h                      \
GMrchaAI0.cpp                GMrchaAI0.h                   \
GMrchaAI1.cpp                GMrchaAI1.h                   \
GMrchaAI2.cpp                GMrchaAI2.h                   \
GMrchaAI3.cpp                GMrchaAI3.h                   \
GMrchaAI4.cpp                GMrchaAI4.h                   \
GMrchaAI5.cpp                GMrchaAI5.h                   \
GMrchaAI_BOSS_DUDLIK.cpp     GMrchaAI_BOSS_DUDLIK.h        \
GMrchaAI_BOSS_TV.cpp         GMrchaAI_BOSS_TV.h            \
GMrchaAI_Blesk.cpp           GMrchaAI_Blesk.h              \
GObject.cpp                  GObject.h                     \
GView.cpp                    GView.h                       \
GZed.cpp                     GZed.h                        \
HD3DX.cpp                    HD3DX.h                       \
HDInput.cpp                  HDInput.h                     \
HDSound.cpp                  HDSound.h                     \
HTranslate.cpp               HTranslate.h                  \
MainFrm.cpp                  MainFrm.h                     \
searchfile.cpp               searchfile.h                  \
                             data.h                        \
                             resource.h                    \
                             stdafx.h 			   \
HFont.cpp		     HFont.h                       \
MCredits.cpp                 MCredits.h                    \
MDeadMatch.cpp               MDeadMatch.h                  \
MDeadMatching.cpp            MDeadMatching.h               \
MHelp.cpp                    MHelp.h                       \
MIntro.cpp                   MIntro.h                      \
MMain.cpp                    MMain.h                       \
MMenu.cpp                    MMenu.h                       \
MMrchovnik.cpp               MMrchovnik.h                  \
MSetting.cpp                 MSetting.h                    \
MSingle.cpp                  MSingle.h                     \
MSinglePlaying.cpp           MSinglePlaying.h
