dist_pkgdata_DATA = \
bomber_s.bmp \
bomber0.bmp \
bomber1.bmp \
bomber2.bmp \
bomber3.bmp \
bonusy.bmp \
DM0.bmp \
DM1.bmp \
DM2.bmp \
mapa0.bmp \
mapa1.bmp \
mapa2.bmp \
mapa3.bmp \
menu.bmp \
menudead.bmp \
menu2.bmp \
menu3.bmp \
mrcha0.bmp \
mrcha0_s.bmp \
mrcha1.bmp \
mrcha1_s.bmp \
mrcha10.bmp \
mrcha10_s.bmp \
mrcha11.bmp \
mrcha11_s.bmp \
mrcha12.bmp \
mrcha12_s.bmp \
mrcha13.bmp \
mrcha13_s.bmp \
mrcha14.bmp \
mrcha14_s.bmp \
mrcha2.bmp \
mrcha2_s.bmp \
mrcha3.bmp \
mrcha3_s.bmp \
mrcha4.bmp \
mrcha4_s.bmp \
mrcha5.bmp \
mrcha6.bmp \
mrcha6_s.bmp \
mrcha7.bmp \
mrcha7_s.bmp \
mrcha8.bmp \
mrcha8_s.bmp \
mrcha9.bmp \
mrcha9_s.bmp \
vybuch.bmp
