dist_pkgdata_DATA = \
mcredits.jpg \
mdead.jpg \
mdeadmatching.jpg \
mdeadmatching2.jpg \
mhelp.jpg \
mmain.jpg \
mrchovnik0.jpg \
mrchovnik1.jpg \
mrchovnik10.jpg \
mrchovnik11.jpg \
mrchovnik2.jpg \
mrchovnik3.jpg \
mrchovnik4.jpg \
mrchovnik5.jpg \
mrchovnik6.jpg \
mrchovnik7.jpg \
mrchovnik8.jpg \
mrchovnik9.jpg \
msetting.jpg \
msingleA11.jpg \
msingleA12.jpg \
msingleA13.jpg \
msingleA14.jpg \
msingleA15.jpg \
msingleA16.jpg \
msingleA17.jpg \
msingleA18.jpg \
msingleA19.jpg \
msingleA21.jpg \
msingleA22.jpg \
msingleA23.jpg \
msingleA24.jpg \
msingleA25.jpg \
msingleA26.jpg \
msingleA28.jpg \
msingleA29.jpg \
msingleA31.jpg \
msingleA32.jpg \
msingleA33.jpg \
msingleA34.jpg \
msingleA35.jpg \
msingleA36.jpg \
msingleA38.jpg \
msingleA39.jpg \
msingleB15.jpg \
msingleB17.jpg \
msingleB19.jpg \
msingleB25.jpg \
msingleB29.jpg \
msingleB35.jpg \
msingleB39.jpg \
msingleC1.jpg \
msingleC2.jpg \
msingleC3.jpg \
mstory.jpg
