dist_pkgdata_DATA = \
mapA1.ble \
mapA2.ble \
mapA3.ble \
mapA4.ble \
mapA5.ble \
mapA6.ble \
mapA7.ble \
mapA8.ble \
mapA9.ble \
mapB1.ble \
mapB2.ble \
mapB3.ble \
mapB4.ble \
mapB5.ble \
mapB6.ble \
mapB7.ble \
mapB8.ble \
mapB9.ble \
mapC1.ble \
mapC2.ble \
mapC3.ble \
mapC4.ble \
mapC5.ble \
mapC6.ble \
mapC7.ble \
mapC8.ble \
mapC9.ble
